# newspaper-agent

./: README.md  pyproject.toml  requirements.txt
newspaper_agent/: __init__.py  agent.py  config.py  requirements.txt  tools.py
newspaper_agent/common/: llm.py
newspaper_agent/prompts/: newspaper_agent.txt
newspaper_agent/skills/daily-briefing/: SKILL.md
