[project]
name = "newspaper-agent"
version = "0.1.0"
description = "A Gemini-powered agent for generating premium newspapers."
authors = [
    { name = "Pili Hu", email = "hupili@google.com" },
    { name = "Jasmine Tong", email = "jasminetong@google.com" },
    { name = "Kun Wang", email = "kunwk@google.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.27.4",
    "google-genai>=0.2.0",
    "pydantic",
    "pydantic-settings",
    "google-cloud-storage",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.4.6",
]

[tool.ruff]
extend = "../../../pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = ["newspaper_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
